<resources>
    <string name="app_name">Android_course</string>
    <string name="onboarding_view_pager_text_1">Fall 2021 г., SpbSU</string>
    <string name="onboarding_view_pager_text_2">We study Android development</string>
    <string name="onboarding_view_pager_text_3">Welcome to the club, buddy</string>
    <string name="onboarding_sign_in_button_text">Sign in</string>
    <string name="onboarding_sign_up_button_text">Sign up</string>
    <string name="sign_in_sign_in_button_text">Sign in</string>
    <string name="sign_in_email_text_layout_hint">enter email</string>
    <string name="sign_in_password_text_layout_hint">enter password</string>
    <string name="sign_in_back_alert_dialog_text">The entered data will be lost</string>
    <string name="sign_in_back_alert_dialog_cancel_button_text">Cancel</string>
    <string name="sign_in_back_alert_dialog_ok_button_text">OK</string>
    <string name="sign_up_firstname_text_layout_hint">enter firstname</string>
    <string name="sign_up_lastname_text_layout_hint">enter lastname</string>
    <string name="sign_up_nickname_text_layout_hint">enter nickname</string>
    <string name="sign_up_under_nickname_text">User Name</string>
    <string name="sign_up_under_email_text">Email</string>
    <string name="sign_up_terms_and_conditions_template">I agree to the terms &amp; conditions </string>
    <string name="sign_up_sign_up_button_text">Sign up</string>
    <string name="sign_up_club_rules">правила клуба</string>
    <string name="email_confirmation_header">Enter verification code</string>
    <string name="profile_logout_button_text">Logout</string>
    <string name="common_general_error_text">Something went wrong!</string>
    <string name="submit_code">Submit code</string>
    <string name="underPasswordText">Password</string>
    <string name="send_code_again">Send code again</string>
    <string name="send_code_again_in">Send code again in: %d</string>
    <string name="timer_up">Tap on button above to send code again.</string>
    <string name="common_counter_prefix">+ %d</string>
    <string name="profile_first_name_label">First name:</string>
    <string name="profile_las_name_label">Last name:</string>
    <string name="profile_nick_name_label">Nick name:</string>
    <string name="profile_email_label">Email:</string>
    <string name="Authorization_error">Authorization failed. Please sign in again</string>
    <string name="authorization_failed">Authorization failed</string>
    <string name="submit">submit</string>
    <string name="create_new_post">Create new post</string>
    <string name="enter_title">enter title</string>
    <string name="enter_post_text">enter post text</string>
    <string name="create_post">create post</string>
    <string name="enter_link">enter link</string>
    <string name="enter_image_link">enter image link</string>
    <string name="choose_image">Choose image</string>
</resources>